updates to homepage and intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -154,7 +154,7 @@
                   </div>
                 </div>
 
-                <button class="full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=204261602379595463300806&h2=Survey-Analysis');">View Full Analysis</button>
+                <button class="intent-full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=204261602379595463300806&h2=Survey-Analysis');">View Full Analysis</button>
 
 
 
@@ -258,7 +258,7 @@
 
                 </div> -->
 
-                <button class="full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=272577681900394187316214&h2=Competitive-Analysis:-Impactua');">View Full Analysis</button>
+                <button class="intent-full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=272577681900394187316214&h2=Competitive-Analysis:-Impactua');">View Full Analysis</button>
                 <!-- <table class="swot-chart">
                   <td class = "swot-logo1" colspan="4">
                       <img src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
@@ -408,7 +408,7 @@
           <p>It was challenging to create an architecture that packed significant content in an approachable way that wasnt overbearingly heavy on the number of pages. </p>
         </div>
 
-        <img class="sitemap-pic" src="intent_partners_images/site_map.png" alt="Site Map">
+        <img class="intent-sitemap-pic" src="intent_partners_images/site_map.png" alt="Site Map">
 
         <div class="sketches-intro">
             <h3>Sketches & Lo- Fidelity Wireframes</h3>
@@ -515,7 +515,6 @@
             <div class=hifi-group>
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_1/Homepage.png" alt="Landing Page Mockup">
             </div>
-            <p>Revision of Hi-fidelity Mockups</p>
             <p>Mockups were reviewed for opportunities for improvement. Recommendations primarily centered on improving typography in ways such as:</p>
               <ul>
                 <li><p>1. Reduce the height of the header and increasing font weight for improved accessibility</p></li>
@@ -558,7 +557,7 @@
             <h3> In Closing</h3>
             <p>Intent Partners presented the challenge to create a digital brand and presence for their consultancy as they move forward in formally establishing their organization. While they had a wide breadth of accomplishments credited to them, the vision was not fully articulated and reflective of current market and user needs. After investigating both and iteratively testing solutions to meet both the consumer need for social impact transparency and business need for local access, we have designed an MVP Product to position Intent Partners as a unique consultancy that offers not only their expertise, but a growing set of digital tools that empower any user to encourage and support the conversation around corporate social impact.</p>
 
-            <button class = "endprototype" onClick="window.open('https://invis.io/PFT4GH4R2AQ#/375165448_Homepage');">View the Prototype</button>
+            <button class ="endprototype" onClick="window.open('https://invis.io/PFT4GH4R2AQ#/375165448_Homepage');">View the Prototype</button>
           </div>
           </section>
 
