Adding links on hompage images & updating resume

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </a>
         <a class="navigation-work" href="#work">Work</a>
         <a class="navigation-about" href="#about">About</a>
-        <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_25.pdf" target="_blank">Resume</a>
+        <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_26.pdf" target="_blank">Resume</a>
       </header>
 
       <section class="hero">
@@ -41,25 +41,25 @@
       </div>
 
       <section class="recent-work">
-          <div class = "project-image">
+          <a class = "project-image" href="intentpartners.html">
             <img class="verve-image" src="intent_partners_images/intent_partners_thumbnail.png" width="323" height="323" alt="Verve preview">
-          </div>
+          </a>
           <div class="project-details">
-            <div>
+            <a href="intentpartners.html">
               <img class="intent-logo" src="intent_partners_images/intent_logo.png" alt="Intent logo">
-            </div>
+            </a>
             <p>Intent Partners is a social impact consultancy that empowers businesses and consumers to work together and improve communities.</p>
             <button onclick="window.location.href = 'intentpartners.html';">READ the case Study</button>
           </div>
-          <div class = "project-image">
+          <a class = "project-image" href="verve.html">
             <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve preview">
-          </div>
+          </a>
           <div class="project-details">
-            <div>
+            <a href="verve.html">
               <img class="project-logo" src="images/verve-logo.png" alt="Verve logo">
-            </div>
+            </a>
             <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-            <button onclick="window.location.href = 'projectgridversion.html';">READ the case Study</button>
+            <button onclick="window.location.href = 'verve.html';">READ the case Study</button>
           </div>
         </section>
 
