--- a/verve.html
+++ b/verve.html
@@ -28,7 +28,7 @@
             </a>
           <a class="navigation-work" href="index.html#work">Work</a>
           <a class="navigation-about" href="index.html#about">About</a>
-          <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_25.pdf" target="_blank">Resume</a>
+          <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_26.pdf" target="_blank">Resume</a>
         </nav>
 
 
@@ -49,7 +49,7 @@
               <h1>Roles</h1>
               <ul class="roles-list">
                 <li>
-                  <p>User Researcher</p>
+                  <p>User Research</p>
                 <li>
                   <p>UX Design</p>
                 <li>
