--- a/intentpartners.html
+++ b/intentpartners.html
@@ -56,6 +56,8 @@
                   <p>Visual Design</p>
                 <li>
                   <p>Branding & Identity</p>
+                <li>
+                  <p>Frontend Development</p>
               </ul>
             </div>
             <div class="deliverables">
@@ -79,6 +81,8 @@
                   <p>Visual Design</p>
                 <li>
                   <p>Hi-Fidelity Prototype</p>
+                <li>
+                  <p>Responsive HTML and CSS</p>
                 </ul>
             </div>
             <div class="tools-used">
@@ -92,6 +96,10 @@
                   <p>Usability Hub</p>
                 <li>
                   <p>Invision</p>
+                <li>
+                  <p>Atom</p>
+                <li>
+                  <p>Git & Github</p>
                 <!-- <li>
                   <p>Usability Hub</p> -->
               </ul>
@@ -557,6 +565,8 @@
             <h3> In Closing</h3>
             <p>Intent Partners presented the challenge to create a digital brand and presence for their consultancy as they move forward in formally establishing their organization. While they had a wide breadth of accomplishments credited to them, the vision was not fully articulated and reflective of current market and user needs. After investigating both and iteratively testing solutions to meet both the consumer need for social impact transparency and business need for local access, we have designed an MVP Product to position Intent Partners as a unique consultancy that offers not only their expertise, but a growing set of digital tools that empower any user to encourage and support the conversation around corporate social impact.</p>
 
+            <p>Next steps for this project include development and deployment. A landing page, develped with HTML5 and CSS3, has been put in place while full development is in process.</p>
+            <img class="coming-soon" src="intent_partners_images/intent-coming-soon.png" alt="Coming Soon Screen">
             <button class ="endprototype" onClick="window.open('https://invis.io/PFT4GH4R2AQ#/375165448_Homepage');">View the Prototype</button>
           </div>
           </section>
