added link to github page for landing page

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -565,8 +565,10 @@
             <h3> In Closing</h3>
             <p>Intent Partners presented the challenge to create a digital brand and presence for their consultancy as they move forward in formally establishing their organization. While they had a wide breadth of accomplishments credited to them, the vision was not fully articulated and reflective of current market and user needs. After investigating both and iteratively testing solutions to meet both the consumer need for social impact transparency and business need for local access, we have designed an MVP Product to position Intent Partners as a unique consultancy that offers not only their expertise, but a growing set of digital tools that empower any user to encourage and support the conversation around corporate social impact.</p>
 
-            <p>Next steps for this project include development and deployment. A landing page, using HTML5 and CSS3, has been deployed while full development is underway.</p>
-            <img class="coming-soon" src="intent_partners_images/intent-coming-soon.png" alt="Coming Soon Screen">
+            <p>Next steps for this project include development and deployment. <a class="intent-landing-link" href="https://jessblanchard.github.io/intent_partners/" target="_blank">A landing page</a>, using HTML5 and CSS3, has been deployed while full development is underway.</p>
+            <a class="intent-landing-link" href="https://jessblanchard.github.io/intent_partners/" target="_blank">
+              <img class="coming-soon" src="intent_partners_images/intent-coming-soon.png" alt="Coming Soon Screen">
+            </a>
             <button class ="endprototype" onClick="window.open('https://invis.io/PFT4GH4R2AQ#/375165448_Homepage');">View the Prototype</button>
           </div>
           </section>
