Updated resume, added favicon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel=stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/maingridversion.css">
+    <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
   </head>
 
   <body class = "homepage">
