Updated research text

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -140,7 +140,7 @@
                     <h2 class="research-findings-body">10% more willing to support products and events that yield a monetary donation to a cause over those that raise awareness.</h6>
                   </div>
                   <div>
-                    <h2 class="research-findings-title">Seeking clarity</h1>
+                    <h2 class="research-findings-title">Seeking Clarity</h1>
                     <h2 class="research-findings-body"> Most express an interest in making decisions based on facts rather than emotion</h6>
                   </div>
                 </div>
@@ -149,11 +149,11 @@
 
                 <div class="user-research-flex">
                   <div>
-                    <h2 class="research-findings-title">Know they’re out of touch</h1>
+                    <h2 class="research-findings-title">Know They’re Out of Touch</h1>
                     <h2 class="research-findings-body">88% view community needs as fluid and evolving over time, but only 63% indicate that they know what's important to their audience.</h6>
                   </div>
                   <div>
-                    <h2 class="research-findings-title">Need to be empowered</h1>
+                    <h2 class="research-findings-title">Need to Be Empowered</h1>
                     <h2 class="research-findings-body">54% don't feel empowered to enact a social impact in their workplace.</h6>
                   </div>
                   <div>
