Updated broken "next" button

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -589,7 +589,7 @@
           <a href="#top">
             <h4 class="top-text" >top</h4>
           </a>
-          <a class="next-text" href="projectgridversion.html">
+          <a class="next-text" href="verve.html">
             <h4 class="next-text">next</h4>
           </a>
           <a href="projectgridversion.html">
