Lesson's Learned update

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -579,7 +579,7 @@
             <h3>Keep Code in Mind</h3>
             <p>I design solutions keeping the user and market needs in mind first, but also with developmental capabilities as well. In considering the application of mapping tools,  it was valuable to consider the complexity of development required to achieve certain goals and tailor this to the particular projects restraints.</p>
             <h3>Be Open Minded</h3>
-            <p>Research will throw unexpected information at you. Sometimes your project will allow for exploration of it, and at time it won't. When I set out to better meet the needs of corporate clients, I discovered that providing a tool to their consumers also benefitted my original goal in a synergetic way. If I had not been open to exploring unexpected solutions, a valuable and unique approach could have been missed.</p>
+            <p>Research will throw unexpected information at you. Sometimes your project will allow for exploration of it, and at times, it won't. When I set out to better meet the needs of corporate clients, I discovered that providing a tool to their consumers also benefitted my original goal in a synergistic way. If I had not been open to exploring unexpected solutions, a valuable and unique approach could have been missed.</p>
         </section>
 
         <div class="bottom-nav">
