--- a/verve.html
+++ b/verve.html
@@ -152,7 +152,7 @@
         <div class="discovery-section3">
             <div class="competitive-analysis">
                 <h3>Competitive Analysis</h3>
-                <p>I analyzed four competitors, Google Drive, Dropbox, Lovelyloot and Flöka and LovelyLoot. The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.</p>
+                <p>I analyzed four competitors, Google Drive, Dropbox, Lovelyloot and Flöka. The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.</p>
 
                 <div class="swot-grid">
                   <img class="google-logo" src="images/Competitor-Logos/googledrive.png" alt="Google Logo">
