--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section class="hero">
           <h1>Hi! I'm Jess,</h1>
-          <h2>a <strong class="hero-emphasis">UX designer</strong> and <strong class="hero-emphasis">brand strategist</strong> from <strong class="hero-emphasis">NYC</strong>. I specialize in creating unique and personal digital experiences.</h2>
+          <h2>a <strong class="hero-emphasis">product designer</strong> from <strong class="hero-emphasis">NYC</strong>. I specialize in strategizing and designing unique and personal digital experiences.</h2>
         </section>
 
       <div class="recent-work-header">
