experimenting with new home page hero and mobile hamburger navigation

--- a/homepage-2021.html
+++ b/homepage-2021.html
@@ -33,8 +33,10 @@
       </header>
 
       <section class="hero">
-          <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
-          <h2 class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver true ROI every time.</h2>
+          <h1 class="hero-headline">Hi, I’m Jessica, a senior UX designer from New York</h1>
+          <h2 class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver measurable ROI every time.</h2>
+          <button class=herobutton1 onclick="window.location.href = '#work';">See case studies</button>
+          <button class=herobutton2 onclick="window.location.href = 'contact.html';">Get in contact</button>
         </section>
 
       <div class="recent-work-header">
