experimenting with hamburger menu

--- a/homepage-2021.html
+++ b/homepage-2021.html
@@ -32,6 +32,29 @@
         <button onclick="window.location.href = 'contact.html';">Get in contact</button>
       </header>
 
+      <nav class="mobilescreen">
+                <div title="Menu" id="menuToggle">
+                  <input type="checkbox">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                     <ul id="menu">
+                      <li>
+                        <a class="navigation-work" href="#work">About my work</a>
+                       </li>
+                       <li>
+                         <a class="navigation-about" href="#about">About me</a>
+                       </li>
+                       <li>
+                         <a class="navigation-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
+                       </li>
+                        <li>
+                          <button onclick="window.location.href = 'contact.html';">Get in contact</button>
+                        </li>
+                      </ul>
+                  </div>
+        </nav>
+
       <section class="hero">
           <h1 class="hero-headline">Hi, I’m Jessica, a senior UX designer from New York</h1>
           <h2 class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver measurable ROI every time.</h2>
