--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -39,6 +39,19 @@
 
     </section>
 
+    <section class="work">
+      <h2 class="work-headline">Recent Projects</h2>
+
+      <div class="featured-work">
+        <img class="featured-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="486px" height="279px"></img>
+        <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
+        <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
+        <p class="featured-project-description">We were to build upon the established look and feel of the microsite but expand significantly upon the content, applying a mobile first approach. </p>
+        <button class="see-the-full-case-study">see the full case study</button>
+      </div>
+
+      <div class="additional-work"
+      </div>
   </body>
 
 
