Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -50,8 +50,39 @@
         <button class="see-the-full-case-study">see the full case study</button>
       </div>
 
-      <div class="additional-work"
+      <div class="additional-work">
+        <div class="card1">
+          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Pharmaceutical | Parkinsons-disease psychosis</h6>
+          <h5 class="card-project-title">NUPLAZID healthcare provider responsive web experience redesign</h5>
+          <button class="card-see-the-full-case-study">coming soon</button>
+        </div>
+
+        <div class="card2">
+          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Pharmaceutical | Vulvovaginal candidiasis</h6>
+          <h5 class="card-project-title">BREXAFEMME Consumer responsive web experience design</h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+        <div class="card3">
+          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Life sciences | Technology database</h6>
+          <h5 class="card-project-title">NIH Office of Technology Transfer responsive web experience design</h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+        <div class="card4">
+          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Finance | pre-approved offers</h6>
+          <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
       </div>
+
+
+
   </body>
 
 
