Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -27,9 +27,33 @@
       </a>
       <a class="nav-work" href="#work">About my work</a>
       <a class="nav-about" href="#about">About Me</a>
-      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Resume</a>
+      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my Resume</a>
       <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in Contact</button>
     </nav>
+
+<!-- MOBILE NAV -->
+    <!-- <nav class="mobilescreen">
+              <div title="Menu" id="menuToggle">
+                <input type="checkbox">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                   <ul id="menu">
+                    <li>
+                      <a class="nav-work-mobile" href="#work">About my work</a>
+                     </li>
+                     <li>
+                      <a class="nav-about-mobile" href="#about">About Me</a>
+                     </li>
+                     <li>
+                       <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
+                     </li>
+                      <li>
+                        <button onclick="window.location.href = 'contact.html';">Get in contact</button>
+                      </li>
+                    </ul>
+                </div>
+    </nav> -->
 
     <section class="hero">
       <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
