Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -102,8 +102,30 @@
           <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
-
       </div>
+      
+      <footer class="footer">
+        <h1 class="footer-header">Let's Work Together!</h1>
+        <p class = "footer-email">hello@jessblanchard.design</p>
+        <div class="footer-links">
+            <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+              <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
+              </a>
+            <a href="https://www.github.com/jessblanchard" target="_blank">
+              <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
+              </a>
+            <a href="https://www.instagram.com/jessytribble" target="_blank">
+              <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
+              </a>
+            <a href="https://www.twitter.com/jesstribble" target="_blank">
+              <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
+              </a>
+            <a href="contact.html" target="_blank">
+              <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
+              </a>
+        </div>
+        <p class="footer-text">Copyright © 2021, designed and developed by Jessica Blanchard</p>
+      </footer>
 
 
 
