Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -23,8 +23,7 @@
 
     <nav class="primary-navigation"
       <a class="logo" href="index.html">
-        <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
-      </a>
+        <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
       <a class="nav-work" href="#work">About my work</a>
       <a class="nav-about" href="#about">About Me</a>
       <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my Resume</a>
@@ -67,7 +66,7 @@
       <h2 class="work-headline">Recent Projects</h2>
 
       <div class="featured-work">
-        <img class="featured-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="486px" height="279px"></img>
+        <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="486px" height="279px"></img>
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
         <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
         <p class="featured-project-description">We were to build upon the established look and feel of the microsite but expand significantly upon the content, applying a mobile first approach. </p>
@@ -103,28 +102,29 @@
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
       </div>
+    </section>
 
-      <footer class="footer">
-        <p class = "footer-email">hello@jessblanchard.design</p>
-        <div class="footer-links">
-            <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
-              <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
-              </a>
-            <a href="https://www.github.com/jessblanchard" target="_blank">
-              <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
-              </a>
-            <a href="https://www.instagram.com/jessytribble" target="_blank">
-              <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
-              </a>
-            <a href="https://www.twitter.com/jesstribble" target="_blank">
-              <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
-              </a>
-            <a href="contact.html" target="_blank">
-              <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
-              </a>
-        </div>
-        <p class="footer-text">Copyright © 2021, designed and developed by Jessica Blanchard</p>
-      </footer>
+    <footer class="footer">
+      <p class = "footer-email">hello@jessblanchard.design</p>
+      <div class="footer-links">
+          <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+            <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
+            </a>
+          <a href="https://www.github.com/jessblanchard" target="_blank">
+            <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
+            </a>
+          <a href="https://www.instagram.com/jessytribble" target="_blank">
+            <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
+            </a>
+          <a href="https://www.twitter.com/jesstribble" target="_blank">
+            <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
+            </a>
+          <a href="contact.html" target="_blank">
+            <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
+            </a>
+      </div>
+      <p class="footer-text">Copyright © 2021, designed and developed by Jessica Blanchard</p>
+    </footer>
 
 
 
