Work on 2021 Update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -21,7 +21,7 @@
 
   <body class="body">
 
-    <nav class="primary-navigation"
+    <nav class="primary-navigation">
       <a class="logo" href="index.html">
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
       <a class="nav-work" href="#work">About my work</a>
@@ -29,6 +29,7 @@
       <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my Resume</a>
       <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in Contact</button>
     </nav>
+
 
 <!-- MOBILE NAV -->
     <!-- <nav class="mobilescreen">
