Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -63,7 +63,10 @@
 
     </section>
 
+    <a name="work"></a>
+
     <section class="work">
+
       <h2 class="work-headline">Recent Projects</h2>
 
       <div class="featured-work">
@@ -76,33 +79,41 @@
 
       <div class="additional-work">
         <div class="card1">
-          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Pharmaceutical | Parkinsons-disease psychosis</h6>
           <h5 class="card-project-title">NUPLAZID healthcare provider responsive web experience redesign</h5>
           <button class="card-see-the-full-case-study">coming soon</button>
         </div>
 
         <div class="card2">
-          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Pharmaceutical | Vulvovaginal candidiasis</h6>
           <h5 class="card-project-title">BREXAFEMME Consumer responsive web experience design</h5>
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
 
         <div class="card3">
-          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Life sciences | Technology database</h6>
           <h5 class="card-project-title">NIH Office of Technology Transfer responsive web experience design</h5>
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
 
         <div class="card4">
-          <img class="card-project-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Finance | pre-approved offers</h6>
           <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
       </div>
+    </section>
+
+    <a name="about"></a>
+
+    <section class="about">
+      <h2 class=about-headline>About me</h2>
+      <p class="about-copy">Hi, I’m Jessica Blanchard, senior UX designer, design mentor and educator. I’m passionate about accessible solutions that drive conversions. My experience spans, healthcare, fintech, non-profit, goverment, and self care in responsive web and mobile applications.</p>
+      <button class="about-button">Read more</button>
     </section>
 
     <footer class="footer">
