Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -70,10 +70,10 @@
       <h2 class="work-headline">Recent Projects</h2>
 
       <div class="featured-work">
-        <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="486px" height="279px"></img>
+        <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
         <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
-        <p class="featured-project-description">We were to build upon the established look and feel of the microsite but expand significantly upon the content, applying a mobile first approach. </p>
+        <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. My team built upon the established look and feel of the previous while designing for an explanded content strategy and applying an accesible and mobile first approach. </p>
         <button class="see-the-full-case-study">see the full case study</button>
       </div>
 
