Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -25,9 +25,9 @@
       <a class="logo" href="index.html">
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
       <a class="nav-work" href="#work">About my work</a>
-      <a class="nav-about" href="#about">About Me</a>
-      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my Resume</a>
-      <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in Contact</button>
+      <a class="nav-about" href="#about">About me</a>
+      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
+      <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
     </nav>
 
 
@@ -59,7 +59,7 @@
       <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
       <p class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver true ROI every time.</p>
       <button class="hero-work" href="#work">Read case studies</button>
-      <button class="hero-contact" href="https://www.jessblanchard.design/contact.html">Get in Contact</button>
+      <button class="hero-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
 
     </section>
 
@@ -74,7 +74,7 @@
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
         <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
         <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. My team built upon the established look and feel of the previous while designing for an explanded content strategy and applying an accesible and mobile first approach. </p>
-        <button class="see-the-full-case-study">see the full case study</button>
+        <button class="see-the-full-case-study">See the full case study</button>
       </div>
 
       <div class="additional-work">
@@ -82,7 +82,7 @@
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Pharmaceutical | Parkinsons-disease psychosis</h6>
           <h5 class="card-project-title">NUPLAZID healthcare provider responsive web experience redesign</h5>
-          <button class="card-see-the-full-case-study">coming soon</button>
+          <button class="card-see-the-full-case-study">Coming soon</button>
         </div>
 
         <div class="card2">
