Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -88,6 +88,8 @@
 
       <h2 class="work-headline">Recent Projects</h2>
 
+      <h3 class="featured-case-study-headline">Featured Case Study</h3>
+
       <div class="featured-work">
         <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
@@ -95,6 +97,8 @@
         <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach. </p>
         <button class="see-the-full-case-study">See the full case study</button>
       </div>
+
+      <h3 class="additional-case-studies-headline">Additional case studies</h3>
 
       <div class="additional-work">
         <div class="card1">
