Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -124,10 +124,26 @@
 
         <div class="card4">
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
-          <h6 class="card-eyebrow-text">Finance | pre-approved offers</h6>
+          <h6 class="card-eyebrow-text">Finance | Pre-approved offers</h6>
           <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
           <button class="card-see-the-full-case-study">See the full case study</button>
         </div>
+
+        <div class="card5">
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Non-profit | Community consulting</h6>
+          <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+        <div class="card6">
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Wellness | Healthy lifestyle management</h6>
+          <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+
       </div>
     </section>
 
