Setting up case study overview section grid

--- a/case-study-template.html
+++ b/case-study-template.html
@@ -81,7 +81,7 @@
       <img class="hero-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot"></img>
     </section>
 
-    <section class="summary">
+    <section class="floodlight-summary">
 
         <h2 class="project-overview-headline">Project overview</h2>
 
